--- a/app_chat/templates/video_room_detail.html
+++ b/app_chat/templates/video_room_detail.html
@@ -369,7 +369,7 @@
             }
 
             $("#btn-start-video").click(function () {
-                //startCall();
+                startCall();
                 //connectButtonHandler();
                 sentNotifications();
             });
